# okf-wiki-plugin

./: .gitignore  .okf-wiki.json  .pre-commit-hooks.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  release-tag.yml  upstream-watch.yml
.okf/: architecture.md  broken.md  conformance-decisions.md  index.md  spec-facts.md  vendor-policy.md
actions/validate/: action.yml
docs/: adopting-study.md  branching.md  consuming.md  plugin-versioning.md  releasing.md  remote-vault.md
docs/examples/: okf-open-pr.py.example  (+1 more)
okf-core/: CLAUDE.md  pyproject.toml
okf-core/scripts/: license_check.py  oracle_diff.py  run_fixture_suite.py  vendor_sync_check.py
okf-core/src/okf_core/: __init__.py  cli.py  context.py  graph.py  index.py  init.py  logmd.py  parser.py  policy.py  validate.py
okf-core/src/okf_core/rules/: v0_1.json
okf-core/tests/: test_cli.py  test_index_graph_context.py  test_init.py  test_invariants.py  test_parser.py  test_policy_rules.py  test_validate.py
okf-core/tests/expected/: appendix-a.json  strict-warns.json  strict-warns.strict.json  violations.json
okf-core/tests/fixtures/appendix-a/: PROVENANCE  index.md
okf-core/tests/fixtures/appendix-a/datasets/: index.md
okf-core/tests/fixtures/appendix-a/tables/: customers.md  index.md  orders.md
okf-core/tests/fixtures/edge/: bad-yaml.md  blank-type.md  bom.md  crlf.md  fence-dashes.md  no-close.md
okf-core/tests/fixtures/strict-warns/: a.md
okf-core/tests/fixtures/violations/: empty-type.md  index.md  no-frontmatter.md
okf-core/tests/fixtures/violations/sub/: index.md
scripts/: marketplace_version.py  next_version.py  release_notes.py  test_doc_links.py  test_marketplace_version.py  test_next_version.py  test_release_notes.py  test_version_sync.py
(+80 files in other folders)
