# 루트 pyproject 셔틀 (#58) — pre-commit(language: python)과 `pip install <repo루트>`
# 소비 전용. 단일 원천은 okf-core/pyproject.toml이며, 여기서는 동일 배포를
# 루트에서 빌드할 수 있게 wheel 패키지 경로만 재지정한다.
[project]
name = "okf-core"
version = "0.2.0"
description = "OKF knowledge bundle engine (root install shim)"
requires-python = ">=3.10"
dependencies = ["pyyaml"]
license = "MIT"

[project.scripts]
okf = "okf_core.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["okf-core/src/okf_core"]

[tool.hatch.build.targets.wheel.sources]
"okf-core/src" = ""

[tool.ruff]
line-length = 100
extend-exclude = ["okf-core/vendor"]  # 벤더 무수정 원칙 — lint/format 대상 제외
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
