[project]
name = "okf-core"
version = "0.2.0"
description = "OKF knowledge bundle engine: parser, conformance validator, index/graph/context tools"
requires-python = ">=3.10"
dependencies = ["pyyaml"]
license = "MIT"

[project.scripts]
okf = "okf_core.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/okf_core"]
